openapi/docs/v2/docs/Problem.md
# Problem

RFC 7807 Problem object (https://tools.ietf.org/html/rfc7807)

## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**type** | **str** | A URI reference that identifies the problem type. This specification encourages that, when dereferenced, it provide human-readable documentation for the problem type. When this member is not present, its value is assumed to be \&quot;about:blank\&quot;. | 
**title** | **str** | A short, human-readable summary of the problem type. It SHOULD NOT change from occurrence to occurrence of the problem, except for purposes of localization (e.g., using proactive content negotiation; | 
**status** | **int** | The HTTP status code ([RFC7231], Section 6) generated by the origin server for this occurrence of the problem. | 
**parameters** | **{str: (str,)}** | Problem parameters for e.g. request body attribute validation. This attribute is not in scope of RFC 7807. | 
**timestamp** | **datetime** |  | 
**id** | **str** |  | [optional] 
**detail** | **str** | A human-readable explanation specific to this occurrence of the problem. | [optional] 
**instance** | **str** | A URI reference that identifies the specific occurrence of the problem.  It may or may not yield further information if dereferenced. | [optional] 
**any string name** | **bool, date, datetime, dict, float, int, list, str, none_type** | any string name can be used but the value must be the correct type | [optional]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


